syntax = "proto3";

package message;
// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative api/message/message.proto
option go_package = "github.com/WhoIsYgim/swampy_rabbit/pkg/api/message;swampyrabbit";

import "google/protobuf/timestamp.proto";

// Сообщение для rabbitMQ
message SwampyRabbit {
  enum Source {
      UNKNOWN = 0;
      SWAMPY = 1;
  }
  string message = 1;
  Source source = 2;
  google.protobuf.Timestamp created_at = 3;
}